# quant

./: .gitignore  README.md  environment.yml
notebooks/: egarch_experiment.py
pyproject.toml/: pyproject.toml
src/features/: fx_features.py
src/mqtoolkit/data/: fetch_fx.py  utils_io.py
src/mqtoolkit/models/: egarch_fx.py  garch_fx.py
src/viz/: charts.py
tests/: test_features.py  test_models.py
